# middleware/validation.js
@@ -24,6 +24,28 @@ const saveCharacter = (req, res, next) => {
   });
 };
 
+const saveHistory = (req,res,next) => {
+  const validationRule = {
+    title: 'required|string',
+    intro: 'required|string',
+    description: 'required|string',
+    world_description: 'string',
+    challenge: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+}
+
 module.exports = {
-  saveCharacter
+  saveCharacter,
+  saveHistory
 };
